# ChannelBot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
bot/: __init__.py  config.py  filters.py  handlers.py  main.py
