[tool.poetry]
name = "icelinbot"
version = "0.2.1"
description = "A bot for managing my channel and its group for comments"
authors = ["Icelin <icelin_channel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
flake8 = "^6.1.0"
aiogram = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
